--- a/Test/Datastreamr.Framework.Test/My Project/Resources.resx
+++ b/Test/Datastreamr.Framework.Test/My Project/Resources.resx
@@ -124,6 +124,9 @@
   <data name="HRPerson" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HRPerson.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="Middleware_FullPersonFile_WithHeader" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Middleware_FullPersonFile_WithHeader.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="Semicolon_Header" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Semicolon_Header.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
